@@ -4,6 +4,8 @@
  * (Internal change) Renamed font_textscale in preferences to initial_sub_scale.
  * Assigned the new actions to change font size to the keys Shift+R (Size-) and
    Shift+T (Size+).
+ * (Experimental) Now it's possible to dock the playlist on the left and right
+   sides of the main window.
 
 (2007-10-25)
  * Now the -nostop-xscreensaver option is passed to mplayer if the screensaver
